--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Quaerat sit sequi temporibus voluptatem. Dolore aut rerum enim aut suscipit face
                                 <button class=" bg-[#393E4680] border rounded-xl w-32 text-center hover:text-blue-700 duration-200">Web Design</button>
                          </div>
                    </div>
-                   <div class="flex gap-6 justify-center lg:justify-start px-5 lg:px-40 py-5 lg:py-10 order-1 lg:order-3">
+                   <div class="none lg:flex gap-6 justify-center lg:justify-start px-5 lg:px-40 py-5 lg:py-10 order-1 lg:order-3">
                         <div class="border bg-gray-800 rounded-lg hover:border-blue-600 duration-300 py-10 px-15">
                                 <img src="project_01.png" alt="">
                         </div>
