--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Quaerat sit sequi temporibus voluptatem. Dolore aut rerum enim aut suscipit face
                          <div>
                                 <h1 class="text-4xl font-bold text-center lg:text-left">My recent <span class="text-[#0080FF]">works</span></h1>
                          </div>
-                         <div class="pt-5 lg:pt-15 none  lg:flex gap-4 justify-center lg:justify-start">
+                         <div class="pt-5 lg:pt-15 flex gap-4 justify-center lg:justify-start">
                                 <button class="bg-[#0080FF] border rounded-xl w-15 text-center hover:text-blue-700 duration-200">All</button>
                                 
                                 <button class="bg-[#393E4680] border rounded-xl w-15 text-center hover:text-blue-700  duration-200">UI</button>
